# SchedVizRust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  scheduler_core.rs
tests/: scheduler_tests.rs
