[package]
name = "schedviz_rust"
version = "0.1.0"
edition = "2024"
authors = ["Prof. Ir. Ts. Dr. Teddy Surya Gunawan, International Islamic University Malaysia"]

[dependencies]
eframe = "0.30"
rfd = "0.15"
csv = "1.3"
image = "0.25"
ab_glyph = "0.2"
png = "0.17"
serde = { version = "1", features = ["derive"] }
